2016-08-03 Fixed displaying viewBox in SVG module
2016-08-03 Fixed checking answers in Memo Game module
2016-08-02 Added compiled Commons library in version 4.0.0 to icplayer libs
2016-08-02 Removing loading-screen from commons
2016-08-01 Added new property to keep wrong marks in Memo Gama module
2016-08-01 Fixed displaying coordinates in editor in Line Selection module
2016-07-27 Fixed problem with removing listeners in Source List
2016-07-27 Fixed problem with sending events in Page Score Counter module
2016-07-27 Fixed displaying watermark in Image Viewer module
2016-07-22 Fixed memory leaks in TextAudio and Audio module
2016-07-21 Fixed issue with static footer when lesson is in iframe
2016-07-19 Fixed issue with https in Vimeo module
2016-07-13 Added removeWrongColors command in Connection module
2016-07-08 Added dragging line in Connection module
2016-07-07 Added show/hide commands in Memo Game module
2016-07-06 Fixed issue with displaying score in Hierarchical Lesson Report
2016-07-06 Fixed issues with static header and footer
2016-07-04 Added positioning to Popup button
2016-06-29 Removed sending event from drawRange commend from Line Number module
2016-06-20 Added property Single Connection to PointsLines module
2016-06-16 Fixed Memo Game crash in KeepAspect Image Mode
2016-06-15 Added keyboard navigation to TrueFalse module
2016-06-13 Added scrolling window to active module in keyboard navigation
2016-06-10 Added ValueChange Event to ZoomImage module
2016-06-07 Added fixes to Fraction Binder modules
2016-06-07 Added commend disable do Connection module
2016-06-07 Added new version of Figure Drawing module
2016-06-06 Improved usability of CrossWord addon
2016-06-02 Fixed issue with LearnPen_Report fetching data from drawing addons
2016-06-02 Added Remove dragged element property to Connection module
2016-06-01 Added allOK event and command in Math module
2016-06-01 Added disable/enable commands in Image Identification module